# django-example-app

./: pyproject.toml
django_example_app/: asgi.py  settings.py  urls.py  wsgi.py
polls/migrations/: 0001_initial.py
