[tool.poetry]
name = "django-example-app"
version = "0.1.0"
description = ""
authors = ["小克 <goodjack@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
